[tool.poetry]
name = "TextRank"
version = "0.1.0"
description = ""
authors = ["wangwei12 <2317073226@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jieba = "^0.39.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
